--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Astral by HTML5 UP</title>
+		<title>Ankit Patel Software Dev</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,14 +15,17 @@
 	<body class="is-preload">
 
 		<!-- Wrapper-->
-			<div id="wrapper">
-
+		<div id="wrapper">
+			<div id="main-title">
+				<h1 class="title">Ankit Patel</h1>
+				<h2 class="title2">Software Engineer</h2>
+			</div>
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
+						<a href="#work" class="fa fa-address-card"><span>Experience</span></a>
+						<a href="#contact" class="icon solid fa-code"><span>Projects</span></a>
+						<a href="https://github.com" class="icon solid fa-info-circle"><span>Contact</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -31,12 +34,12 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
+									<h1>Ankit Patel</h1>
+									<p>Software Engineer</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img class="profilepic" src="images/ankit profile.jpg" alt="" />
 								</a>
 							</article>
 
