--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" type="image/png" href="https://img.icons8.com/color/96/000000/code.png"/>
+
 	</head>
 	<body class="is-preload">
 
@@ -23,9 +25,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="fa fa-address-card"><span>Experience</span></a>
-						<a href="#contact" class="icon solid fa-code"><span>Projects</span></a>
-						<a href="https://github.com" class="icon solid fa-info-circle"><span>Contact</span></a>
+						<a href="#work" class="icon fa-address-card"><span>Experience</span></a>
+						<a href="#projects" class="icon solid fa-code"><span>Projects</span></a>
+						<a href="#about" class="icon solid fa-info-circle"><span>About</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -36,6 +38,19 @@
 								<header>
 									<h1>Ankit Patel</h1>
 									<p>Software Engineer</p>
+									<ul class="skills">
+										<li>Ruby</li>
+										<li>JavaScript</li>
+										<li>Node.js</li>
+										<li>React.js</li>
+										<li>MongoDB</li>
+										<li>SQL</li>
+										<li>Networking</li>
+										<li>Ruby on Rails</li>
+										<li>Express.js</li>
+										<li>HTML5</li>
+										<li>CSS</li>
+									</ul>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -95,8 +110,8 @@
 								</section>
 							</article>
 
-						<!-- Contact -->
-							<article id="contact" class="panel">
+						<!-- Projects -->
+							<article id="projects" class="panel">
 								<header>
 									<h2>Contact Me</h2>
 								</header>
@@ -121,6 +136,15 @@
 										</div>
 									</div>
 								</form>
+							</article>
+
+						<!-- About -->
+							<article id="about" class="panel">
+								<header>
+									<h1>I am a person</h1>
+									<p>I like things</p>
+								</header>
+		
 							</article>
 
 					</div>
