--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 										<li>Express.js</li>
 										<li>HTML5</li>
 										<li>CSS</li>
+										<li>test</li>
 									</ul>
 								</header>
 								<a href="#work" class="jumplink pic">
