--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Ankit Patel</h1>
-									<p>Software Engineer</p>
+									<p class="sub">Software Engineer</p>
+
 									<ul class="skills">
 										<li>Ruby</li>
 										<li>JavaScript</li>
@@ -53,21 +54,38 @@
 									</ul>
 								</header>
 								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 									<img class="profilepic" src="images/ankit profile.jpg" alt="" />
 								</a>
 							</article>
 
 						<!-- Work -->
 							<article id="work" class="panel">
-								<header>
-									<h2>Work</h2>
-								</header>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
-								</p>
+								<div>
+									<h1>Work Experience</h1>
+								</div>
+								<div class="job-listing">
+									<h1>MiiCloud Inc.</h1>
+									<h2>Software Engineer</h2>
+									<ul>
+										<li>Sole developer of a simple prototype based on the founders vision using AWS Rekognition to make a facial recognition system with built in machine learning in 2 weeks.</li>
+										<li>
+											Assist in the design and implementation of facial recognition system with AWS.
+										</li>
+										<li>
+											Help architect software workflow and research machine learning solutions.
+										</li>
+										<li>
+											Research and implement various authentication standards into company software.
+										</li>
+										<li>
+											Design and plan core features and user experience needed for V.1 and prototype phase of the project.
+										</li>
+										<li>
+											Worked with CEO and specialists in various fields to prioritize certain features like facial recognition and authentication security in different versions of the product to streamline overseas development down to 12 weeks.
+										</li>
+									</ul>
+
+								</div>
 
 							</article>
 
@@ -113,7 +131,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Untitled.</li><li>Design: <a href="hu">HTP</a></li>
 						</ul>
 					</div>
 
