add 2nd job disc

--- a/index.html
+++ b/index.html
@@ -60,12 +60,29 @@
 
 						<!-- Work -->
 							<article id="work" class="panel">
-								<div>
+								<div class="work-title">
 									<h1>Work Experience</h1>
 								</div>
 								<div class="job-listing">
+									<h1>Freelance</h1>
+									<h2>Hardware/Software Engineer | 2019-2020</h2>
+									<ul>
+										<li>
+											Add functionality to existing backends, modify API to integrate client referral tracking, and build dashboards for internal sites to show change in sales.
+										</li>
+										<li>
+											Diagnosed hardware related problems to crucial business systems using advanced troubleshooting procedures and multimeters allowing for minimal loss of business.
+										</li>
+										<li>
+											Recovered priceless data and restored systems to original state with minimal down time, saving clients hundreds of dollars in operational fees.
+										</li>
+										
+									</ul>
+								</div>
+								<div class="spacer"></div>
+								<div class="job-listing">
 									<h1>MiiCloud Inc.</h1>
-									<h2>Software Engineer</h2>
+									<h2>Software Engineer | 2018-2019</h2>
 									<ul>
 										<li>Sole developer of a simple prototype based on the founders vision using AWS Rekognition to make a facial recognition system with built in machine learning in 2 weeks.</li>
 										<li>
@@ -84,9 +101,23 @@
 											Worked with CEO and specialists in various fields to prioritize certain features like facial recognition and authentication security in different versions of the product to streamline overseas development down to 12 weeks.
 										</li>
 									</ul>
-
 								</div>
-
+								<div class="spacer"></div>
+								<div class="job-listing">
+									<h1>Septimplex Inc.</h1>
+									<h2>Network Engineer | 2017-2019</h2>
+									<ul>
+										<li>
+											Worked with new clients to assess their needs, conduct walk-throughs of property, identify current problems, provide possible solutions at various prices, and plan scope of work to keep project time to less than 4 weeks.
+										</li>
+										<li>
+											Researched, built, and configured custom network hardware that would save the customer 90% on cost compared to commercial options, providing considerable savings.
+										</li>
+										<li>
+											Assist in design and implementation of networks for private businesses involving multiple access points and mesh capabilities using Ubiquity network equipment.
+										</li>
+									</ul>
+								</div>
 							</article>
 
 						<!-- Projects -->
