change background color

--- a/index.html
+++ b/index.html
@@ -123,8 +123,16 @@
 						<!-- Projects -->
 							<article id="projects" class="panel">
 								<header>
-									<h2>Things I made</h2>
+									<h2 id="project-intro">Things I made</h2>
+									<div class="spacer"></div>
 								</header>
+								<div class="project">
+									<div class="project-img">image</div>
+									<div class="project-text">
+										<h1>project 1</h1>
+										<p>desc</p>
+									</div>
+								</div>
 								
 							</article>
 
