--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 							<article id="about" class="panel">
 								<header>
 									<h1>I am a person</h1>
-									<p>I like things</p>
+									<p>I like things, also this is under progress</p>
 								</header>
 		
 							</article>
