--- a/index.html
+++ b/index.html
@@ -135,12 +135,41 @@
 									<div class="spacer"></div>
 								</header>
 								<div class="project">
-									<div class="project-img">image</div>
 									<div class="project-text">
-										<h1>project 1</h1>
-										<p>desc</p>
+										<div class="project-links">
+											<h1>MusicMD</h1>
+											<a href="https://musicmd.herokuapp.com/#/"><h3>Live</h3></a>
+											<a href="https://github.com/mkochalko/musicMD"><h3>Github</h3></a>
+										</div>
+										<div class="project-img">
+											<img src="https://github.com/mkochalko/musicMD/blob/master/frontend/public/images/search_page.png?raw=true" alt="musicMD">
+										</div>
+										<p>MusicMD is a passion project that I worked on with a group of close friends. We were all big fans of live music and wanted to make an app that would let us discover new music around us. <br>
+										The app displays all music events around the user's location and compiles a playlist of songs likely to be played at that event. The user gets a taste of the artist and can save the playlist and event to their favorites list. <br>
+										MusicMD uses a Node.js back-end with Express.js, MongoDB, and React.js. It also uses APIs from Ticketmaster, Setlist.fm, and Google maps.
+										</p>
+
 									</div>
 								</div>
+								<div class="project">
+									<div class="project-text">
+										<div class="project-links">
+											<h1>Correlationships</h1>
+											<a href="https://ankitspatel1145.github.io/CasualCorrelationship/"><h3>Live</h3></a>
+											<a href="https://github.com/ankitspatel1145/CasualCorrelationship"><h3>Github</h3></a>
+										</div>
+										<div class="project-img">
+											<img src="https://github.com/ankitspatel1145/CasualCorrelationship/blob/master/assets/casual.png?raw=true" alt="correlationships">
+										</div>
+										<p>MusicMD is a passion project that I worked on with a group of close friends. We were all big fans of live music and wanted to make an app that would let us discover new music around us. <br>
+										The app displays all music events around the user's location and compiles a playlist of songs likely to be played at that event. The user gets a taste of the artist and can save the playlist and event to their favorites list. <br>
+										MusicMD uses a Node.js back-end with Express.js, MongoDB, and React.js. It also uses APIs from Ticketmaster, Setlist.fm, and Google maps.
+										</p>
+
+									</div>
+								</div>
+
+
 								
 							</article>
 
