--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 						<!-- About -->
 							<article id="about" class="panel">
 								<header>
-									<h1>I am a person</h1>
+									<h1>I am a person?</h1>
 									<p>I like things, also this is under progress</p>
 								</header>
 		
