--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 									<h1>Contact</h1>
 									<p>
 										Email: <br>
-										ankitspatel1145@gmail.com
+										ankitspatel1145@gmail.co
 									</p>
 									<div class="spacer"></div>
 								</div>
