--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 								<div class="about-div">
 									<h1>Contact</h1>
 									<p>
-										Email: <br>
+										Email: <br><br>
 										ankitspatel1145@gmail.com
 									</p>
 									<div class="spacer"></div>
