--- a/index.html
+++ b/index.html
@@ -138,11 +138,13 @@
 									<div class="project-text">
 										<div class="project-links">
 											<h1>MusicMD</h1>
-											<a href="https://musicmd.herokuapp.com/#/" target="_blank"><h3>Live</h3></a>
-											<a href="https://github.com/mkochalko/musicMD" target="_blank"><h3>Github</h3></a>
+											<a class = "git-link" href="https://musicmd.herokuapp.com/#/" target="_blank"><h3>Live</h3></a>
+											<a class = "git-link" href="https://github.com/mkochalko/musicMD" target="_blank"><h3>Github</h3></a>
 										</div>
 										<div class="project-img">
-											<img src="https://github.com/mkochalko/musicMD/blob/master/frontend/public/images/search_page.png?raw=true" alt="musicMD">
+											<a href="https://musicmd.herokuapp.com/#/" target="_blank">
+												<img src="https://github.com/mkochalko/musicMD/blob/master/frontend/public/images/search_page.png?raw=true" alt="musicMD">
+											</a>
 										</div>
 										<p>MusicMD is a passion project that I worked on with a group of close friends. We were all big fans of live music and wanted to make an app that would let us discover new music around us. <br>
 										The app displays all music events around the user's location and compiles a playlist of songs likely to be played at that event. The user gets a taste of the artist and can save the playlist and event to their favorites list. <br>
@@ -155,11 +157,14 @@
 									<div class="project-text">
 										<div class="project-links">
 											<h1>Correlationships</h1>
-											<a href="https://ankitspatel1145.github.io/CasualCorrelationship/" target="_blank"><h3>Live</h3></a>
-											<a href="https://github.com/ankitspatel1145/CasualCorrelationship" target="_blank"><h3>Github</h3></a>
+											<a class = "git-link" href="https://ankitspatel1145.github.io/CasualCorrelationship/" target="_blank"><h3>Live</h3></a>
+											<a class = "git-link" href="https://github.com/ankitspatel1145/CasualCorrelationship" target="_blank"><h3>Github</h3></a>
 										</div>
 										<div class="project-img">
-											<img src="https://github.com/ankitspatel1145/CasualCorrelationship/blob/master/assets/casual.png?raw=true" alt="correlationships">
+											<a class = "git-link" href="https://ankitspatel1145.github.io/CasualCorrelationship/" target="_blank">
+											
+												<img src="https://github.com/ankitspatel1145/CasualCorrelationship/blob/master/assets/casual.png?raw=true" alt="correlationships">
+											</a>
 										</div>
 										<p>
 											Correlationships is a data visuization project that uses data from various free APIs to build and compare unrelated data. <br>
@@ -175,11 +180,15 @@
 									<div class="project-text">
 										<div class="project-links">
 											<h1>Mr. T with Strangers</h1>
-											<a href="https://mr-t-with-strangers.herokuapp.com/#/" target="_blank"><h3>Live</h3></a>
-											<a href="https://github.com/ankitspatel1145/mrTwithStrangers" target="_blank"><h3>Github</h3></a>
+											<a class="git-link" href="https://mr-t-with-strangers.herokuapp.com/#/" target="_blank"><h3>Live</h3></a>
+											<a class="git-link"href="https://github.com/ankitspatel1145/mrTwithStrangers" target="_blank"><h3>Github</h3></a>
 										</div>
 										<div class="project-img">
-											<img src="https://github.com/ankitspatel1145/mrTwithStrangers/raw/master/app/assets/images/logo.png" alt="mrt">
+											<a class="git-link" href="https://mr-t-with-strangers.herokuapp.com/#/" target="_blank">
+												<img src="https://github.com/ankitspatel1145/mrTwithStrangers/raw/master/app/assets/images/logo.png" alt="mrt">
+											
+											</a>
+
 										</div>
 										<p>
 											Mr.T with Strangers is a full-stack app that is satirizing sites like Meetup.com <br>
